# internal/feature/auth/delivery/http/dto/request_auth.go
@@ -10,3 +10,9 @@ type AuthPayload struct {
 type RefreshPayload struct {
 	RefreshToken string `json:"refresh_token" binding:"required"`
 }
+
+// LDAPLoginPayload is the request body for LDAP login.
+type LDAPLoginPayload struct {
+	Email    string `json:"email" binding:"required"` // Could be a username or email
+	Password string `json:"password" binding:"required,min=1"`
+}
